...
    <string name="map">Map</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings_page">SettingsPage</string>
    <string name="help">Help</string>
    <string name="title_activity_help_page">HelpPage</string>
    <string name="my_profile">My profile</string>
    <string name="myprofile">My profile</string>
    <string name="my_profile_page">My profile page</string>
    <string name="UserCreation">User Creation</string>


    <!-- Actions -->
    <string name="login">Login</string>
    <string name="save">Save</string>
    <string name="do_not_save">Don\'t save</string>
    <string name="editmyprofile">Edit my profile</string>
    <string name="edit_profile_button_text">Edit profile</string>
    <string name="capture_video">Capture video</string>
    <string name="sign_in_with_google">sign in with google</string>
    <string name="contact_musician">Contact </string> <!-- leave blank space after contact to avoid failing tests -->
    <string name="musiconnect_contact_mail">MusiConnect Contact Mail</string>
    <string name="start_using_application">Start using application</string>
    <string name="signout">Sign Out</string>
    <string name="btn_cancel">Cancel</string>
    <string name="add_change_video">add/Change Video</string>
    <string name="new_participant_email_address">New participant email address</string>
    <string name="your_events">Your events</string>
    <string name="channel_name">channel</string>
    <string name="channel_description">description</string>
    <string name="add_users">Add Users</string>
    <string name="add_event">Add event</string>
...
    <string name="bandFinderLevels">Level</string>
    <string name="bandFinderButton">Find band</string>

    <string name="event_is_private">This event is private and you are not a participant</string>
    <string name="no_events_to_show">This user has no events to show...</string>

    <string name="my_bands">My bands</string>

    <string-array name="instruments_array">
        <item>- Select instrument -</item>
        <item>Accordion</item>
        <item>Bagpipes</item>
        <item>Banjo</item>
...
