...
                    android:id="@+id/btnSaveProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save" />

                <Button
                    android:id="@+id/btnCaptureVideo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_change_video"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
...
